<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (C) 2020 Indiana University

This program is free software; you can redistribute it and/or
modify it under the terms of the GNU General Public License
as published by the Free Software Foundation; either version 2
of the License, or (at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
		http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.scijava</groupId>
        <artifactId>pom-scijava</artifactId>
        <version>27.0.1</version>
        <relativePath/>
    </parent>

    <groupId>icbm-iupui</groupId>
    <artifactId>vtea</artifactId>
    <version>1.0alpha8-SNAPSHOT</version>

    <name>VTEA master</name>
    <description>Volumetric analysis</description>
    
    <properties>
        <clearcl.version>0.3.6</clearcl.version>
        <cleargl.version>1.0.18</cleargl.version>
        <enforcer.skip>true</enforcer.skip>
        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
        <netbeans.hint.license>gpl20</netbeans.hint.license>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.itk.simple/simpleitk -->
        <dependency>
            <groupId>org.itk.simple</groupId>
            <artifactId>simpleitk</artifactId>
            <version>0.9.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.github.lejon.T-SNE-Java</groupId>
            <artifactId>tsne</artifactId>
            <version>v2.5.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.haifengl/smile-netlib -->
        <dependency>
            <groupId>com.github.haifengl</groupId>
            <artifactId>smile-netlib</artifactId>
            <version>1.5.3</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.haifengl/smile-core -->
        <dependency>
            <groupId>com.github.haifengl</groupId>
            <artifactId>smile-core</artifactId>
            <version>1.5.3</version>
            <type>jar</type>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.haifengl/smile-plot -->
        <dependency>
            <groupId>com.github.haifengl</groupId>
            <artifactId>smile-plot</artifactId>
            <version>1.5.3</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>net.imagej</groupId>
            <artifactId>ij</artifactId>
            <version>1.53f</version>
            <type>jar</type>
        </dependency>
        <!-- https://mvnrepository.com/artifact/net.imagej/imagej-ui-swing -->
        <dependency>
            <groupId>org.swinglabs</groupId>
            <artifactId>swing-layout</artifactId>
            <version>1.0.3</version>
        </dependency>
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>4.1</version>
        </dependency>
        <dependency>
            <groupId>org.jfree</groupId>
            <artifactId>jfreechart</artifactId>
            <version>1.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.jfree</groupId>
            <artifactId>jcommon</artifactId>
            <version>1.0.21</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>1.4.198</version>
        </dependency>
        <dependency>
            <groupId>org.swinglabs</groupId>
            <artifactId>jxlayer</artifactId>
            <version>3.0.4</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.1</version>
        </dependency>
        <dependency>
            <groupId>net.imglib2</groupId>
            <artifactId>imglib2</artifactId>
            <version>5.8.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.scijava</groupId>
            <artifactId>scijava-common</artifactId>
        </dependency>
        <!-- https://mvnrepository.com/artifact/net.imglib2/imglib2-ij -->
        <dependency>
            <groupId>net.imglib2</groupId>
            <artifactId>imglib2-ij</artifactId>          
        </dependency>
        <dependency>
            <groupId>net.imagej</groupId>
            <artifactId>imagej</artifactId>
            <version>2.0.0-rc-55</version>
        </dependency>
        <dependency>
            <groupId>net.imagej</groupId>
            <artifactId>imagej-deprecated</artifactId>
            <version>0.1.1</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.5</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.github.haifengl</groupId>
            <artifactId>smile-math</artifactId>
            <version>1.5.3</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>com.github.ijpb</groupId>
            <artifactId>MorphoLibJ</artifactId>
            <version>v1.4.0</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.renjin</groupId>
            <artifactId>renjin-aether-package-loader</artifactId>
            <version>3.5-beta76</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>org.renjin</groupId>
            <artifactId>renjin-script-engine</artifactId>
            <version>3.5-beta76</version>
        </dependency>
        <dependency>
            <groupId>org.renjin</groupId>
            <artifactId>grDevices</artifactId>
            <version>3.5-beta76</version>
        </dependency>
                <dependency>
            <groupId>org.renjin.cran</groupId>
            <artifactId>ggplot2</artifactId>
            <version>3.2.0-b8</version>
            <type>jar</type>
        </dependency>
  <dependency>
  <groupId>org.renjin.cran</groupId>
  <artifactId>vioplot</artifactId>
  <version>0.3.0-b1</version>
  </dependency>
        
        <!-- https://mvnrepository.com/artifact/com.github.yannrichet/Rsession -->
        <dependency>
            <groupId>com.github.yannrichet</groupId>
            <artifactId>Rsession</artifactId>
            <version>3.0.5</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.external</groupId>
            <artifactId>AbsoluteLayout</artifactId>
            <version>RELEASE113</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.formdev/flatlaf -->
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>0.44</version>
            <type>jar</type>
        </dependency>    
        <!--Renjin specfic dependencies, needs to be pulled out for for a separate pom.xml-->     
        <dependency>
            <groupId>org.renjin.cran</groupId>
            <artifactId>colorspace</artifactId>
            <version>1.3-2-b57</version>
        </dependency>
        <dependency>
            <groupId>org.renjin.cran</groupId>
            <artifactId>gplots</artifactId>
            <version>3.0.1-b89</version>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
            </resource>
            <resource>
                <directory>${project.build.sourceDirectory}</directory>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>${basedir}/src/test/resources</directory>
            </testResource>
            <testResource>
                <directory>${project.build.testSourceDirectory}</directory>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>vtea._vtea</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <showDeprecation>true</showDeprecation>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>vtea._vtea</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>  
    <developers>
        <developer>
            <id>swin</id>
            <name>Seth Winfree</name>
            <email>winfrees@iupui.edu</email>
            <url></url>
            <organization>IUPUI</organization>
            <organizationUrl>www.iupui.edu</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>-6</timezone>
        </developer>
    </developers>

    <!-- NB: for project parent -->
    <repositories>
        <repository>
            <id>scijava.releases</id>
            <url>https://maven.scijava.org/content/repositories/releases</url>
        </repository>
        <repository>
            <id>scijava.snapshots</id>
            <url>https://maven.scijava.org/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>scijava.public</id>
            <url>https://maven.scijava.org/content/groups/public</url>
        </repository>
        <repository>
            <id>bedatadriven</id>
            <name>bedatadriven public repo</name>
            <url>https://nexus.bedatadriven.com/content/groups/public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
</project>
